fix: add direct auth in swagger
